# alpha

./: Cargo.toml  LICENCE  PKGBUILD  README.md
src/: alphabet.rs  lib.rs  main.rs
