[package]
name = "alpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
colored = "2.0.0"
prettytable = "0.10.0"
strsim = "0.10.0"
